--- a/README
+++ b/README
@@ -3,15 +3,16 @@ My main focus was implementing a maintainable, layered MVC-style architecture us
 In the beginning I mixed UI-, controller- and model-logic, because what I learned in class was closer to an MVP pattern.  
 Over time I refactored the code into a clean MVC structure to clearly separate concerns.
 
-Technically, this project applies multiple core software engineering principles:
+Concepts I apply in this project:
 – OOP with encapsulated models and private fields  
 – constructor-based dependency injection  
 – a layered MVC-style architecture  
 – asynchronous JavaScript with multi-layer async flow  
-– template-based rendering without frameworks  
-– REST API integration through a custom Express proxy  
+– template-based rendering  
+– REST API with Express as a proxy for the open book library API  
 – separation of concerns between View, Controller, Model and Service  
-– structured error handling and validation  
+– error handling and validation
+- event handling
 
 
 ┌───────────────────────────────┐
